--- a/roles/projects/tasks/main.yml
+++ b/roles/projects/tasks/main.yml
@@ -70,7 +70,12 @@
   
 - name: Copy the code from repository
   git: repo={{ repository }} dest=/var/www/html/  force=yes
-
+  
 - name: Creates the index.php file
   copy: src=templates/index.php.j2 dest=/var/www/html/index.php
+  
+- name: Update remote server ip in index.php
+  command: sed -i 's/172.20.1.101/192.168.56.103/g' /var/www/html/index.php
+  
+  
 
